--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vue-cli-plugin-pug": "^2.0.0",
     "vuedraggable": "^4.0.3"
   },
   "devDependencies": {
